--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/_deleteModal.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/_deleteModal.scss
@@ -113,7 +113,7 @@
 		cursor: pointer;
 
 		&:hover,
-		:active {
+		&:active {
 			background-color: v.$delete-modal-delete-button-hover-background-color;
 		}
 	}
@@ -124,7 +124,7 @@
 		color: v.$delete-modal-delete-button-background-color;
 
 		&:hover,
-		:active {
+		&:active {
 			background-color: v.$mode-delete-modal-cancel-button-hover-background-color-light;
 		}
 	}
