--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewSidebarTableAndRows.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewSidebarTableAndRows.scss
@@ -20,7 +20,7 @@
 		cursor: pointer;
 
 		&:hover,
-		:active {
+		&:active {
 			background-color: v.$mode-item-view-list-sidebar-expand-minimize-button-hover-background-color-light;
 		}
 	}
