--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewCreateItemSidebar.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewCreateItemSidebar.scss
@@ -81,7 +81,7 @@
 		margin-top: v.$create-item-sidebar-text-input-margin-top;
 		margin-bottom: v.$edit-account-create-item-sidebar-form-input-margin-bottom;
 		outline: none;
-		border: v.$form-input-text-base-border-width solid
+		border: v.$form-input-text-border-width solid
 			v.$mode-base-form-input-border-color-light;
 		border-radius: v.$form-input-border-radius;
 		box-sizing: border-box;
@@ -92,9 +92,7 @@
 		font-family: Arial, Helvetica, sans-serif;
 
 		&:focus {
-			box-shadow: v.$mode-base-form-input-focus-box-shadow-color-light;
-			-moz-box-shadow: v.$mode-base-form-input-focus-box-shadow-color-light;
-			-webkit-box-shadow: v.$mode-base-form-input-focus-box-shadow-color-light;
+			border-color: v.$mode-base-form-input-focus-border-color-light;
 		}
 	}
 
@@ -107,7 +105,7 @@
 		margin-top: v.$create-item-sidebar-text-input-margin-top;
 		margin-bottom: v.$edit-account-create-item-sidebar-form-input-margin-bottom;
 		outline: none;
-		border: v.$form-input-text-base-border-width solid
+		border: v.$form-input-text-border-width solid
 			v.$mode-base-form-input-border-color-light;
 		border-radius: v.$form-input-border-radius;
 		background: v.$mode-base-form-input-background-color-light;
@@ -121,9 +119,7 @@
 		resize: none;
 
 		&:focus {
-			box-shadow: v.$mode-base-form-input-focus-box-shadow-color-light;
-			-moz-box-shadow: v.$mode-base-form-input-focus-box-shadow-color-light;
-			-webkit-box-shadow: v.$mode-base-form-input-focus-box-shadow-color-light;
+			border-color: v.$mode-base-form-input-focus-border-color-light;
 		}
 	}
 
@@ -152,9 +148,7 @@
 		font-size: 13px;
 
 		&:focus {
-			box-shadow: v.$mode-base-form-input-focus-box-shadow-color-light;
-			-moz-box-shadow: v.$mode-base-form-input-focus-box-shadow-color-light;
-			-webkit-box-shadow: v.$mode-base-form-input-focus-box-shadow-color-light;
+			border-color: v.$mode-base-form-input-focus-border-color-light;
 		}
 	}
 
@@ -169,34 +163,14 @@
 		font-size: 13px;
 
 		&:focus {
-			box-shadow: v.$mode-base-form-input-focus-box-shadow-color-light;
-			-moz-box-shadow: v.$mode-base-form-input-focus-box-shadow-color-light;
-			-webkit-box-shadow: v.$mode-base-form-input-focus-box-shadow-color-light;
+			border-color: v.$mode-base-form-input-focus-border-color-light;
 		}
 	}
 
 	.form__submit {
+		@include m.base-form-submit-button();
+
 		margin-top: 10px;
 		margin-bottom: 15px;
-		outline: none;
-		// Need to get rid of border for a submit button
-		border: 0;
-		border-radius: v.$base-buttton-border-radius;
-		// This background color should only appear if there was a problem
-		// ...assigning a different background color to this element.
-		// ...the scss for the colors assigned are in app.scss
-		background-color: black;
-		padding: 10px;
-		width: 100%;
-		color: white;
-		font-family: Arial, Helvetica, sans-serif;
-		font-size: 16px;
-		cursor: pointer;
-
-		&:focus {
-			box-shadow: v.$mode-base-form-submit-button-focus-box-shadow-color-light;
-			-moz-box-shadow: v.$mode-base-form-submit-button-focus-box-shadow-color-light;
-			-webkit-box-shadow: v.$mode-base-form-submit-button-focus-box-shadow-color-light;
-		}
 	}
 }
